--- a/ai/vector-search-typescript/.env.example
+++ b/ai/vector-search-typescript/.env.example
@@ -12,13 +12,11 @@ EMBEDDING_SIZE_BATCH=16
 # ========================================
 # Data File Paths and Vector Configuration
 # ========================================
-DATA_FILE_WITHOUT_VECTORS=../data/HotelsData_toCosmosDB.JSON
-DATA_FILE_WITH_VECTORS=../data/HotelsData_toCosmosDB_Vector.json
-DATA_FILE_WITH_SIMILARITY=../data/HotelsData_toCosmosDB_Vector_Similarity.json
-QUERY_FILE_WITH_VECTORS=../data/HotelsData_Query_Vector.json
+DATA_FILE_WITHOUT_VECTORS=../data/Hotels.JSON
+DATA_FILE_WITH_VECTORS=../data/Hotels_Vector.json
 DATA_FOLDER=../data/
 FIELD_TO_EMBED=Description
-EMBEDDED_FIELD=text_embedding_ada_002
+EMBEDDED_FIELD=text-embedding-3-small
 EMBEDDING_DIMENSIONS=1536
 LOAD_SIZE_BATCH=100
 
