--- a/ai/vector-search-typescript/package.json
+++ b/ai/vector-search-typescript/package.json
@@ -6,12 +6,12 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start:one-insert": "node --env-file .env dist/insert-one-document.js",
-    "start:embed": "node --env-file .env dist/create-embeddings.js",
-    "start:show-indexes": "node --env-file .env dist/showIndexes.js",
-    "start:ivf": "node --env-file .env dist/ivf.js",
-    "start:hnsw": "node --env-file .env dist/hnsw.js",
-    "start:diskann": "node --env-file .env dist/diskann.js"
+    "start:one-insert": "node --env-file ../../.env dist/insert-one-document.js",
+    "start:embed": "node --env-file ../../.env dist/create-embeddings.js",
+    "start:show-indexes": "node --env-file ../../.env dist/showIndexes.js",
+    "start:ivf": "node --env-file ../../.env dist/ivf.js",
+    "start:hnsw": "node --env-file ../../.env dist/hnsw.js",
+    "start:diskann": "node --env-file ../../.env dist/diskann.js"
   },
   "dependencies": {
     "@azure/identity": "^4.11.1",
