updates - all language samples run

--- a/ai/vector-search-dotnet/appsettings.json
+++ b/ai/vector-search-dotnet/appsettings.json
@@ -1,16 +1,16 @@
 {
   "AzureOpenAI": {
-    "EmbeddingModel": "text-embedding-ada-002",
-    "ApiVersion": "2023-05-15",
+    "EmbeddingModel": "text-embedding-3-small",
+    "ApiVersion": "2024-08-01-preview",
     "Endpoint": "https://<your-openai-service-name>.openai.azure.com/"
   },
   "DataFiles": {
-    "WithoutVectors": "HotelsData_toCosmosDB.JSON",
-    "WithVectors": "HotelsData_toCosmosDB_Vector.json"
+    "WithoutVectors": "data/Hotels.json",
+    "WithVectors": "data/Hotels_Vector.json"
   },
   "Embedding": {
     "FieldToEmbed": "Description",
-    "EmbeddedField": "text_embedding_ada_002",
+    "EmbeddedField": "DescriptionVector",
     "Dimensions": 1536,
     "BatchSize": 16
   },
