--- a/ai/vector-search-python/requirements.txt
+++ b/ai/vector-search-python/requirements.txt
@@ -2,7 +2,8 @@
 pymongo>=4.6.0
 
 # Azure OpenAI SDK for generating embeddings
-openai>=1.0.0
+# Pinned to 1.55.3 for Python 3.8 compatibility (newer versions require Python 3.9+)
+openai>=1.0.0,<1.56.0
 
 # Azure authentication library for passwordless connection
 azure-identity>=1.15.0
