--- a/ai/vector-search-go/.env.example
+++ b/ai/vector-search-go/.env.example
@@ -2,8 +2,8 @@
 # Enable debug mode for verbose logging (true/false)
 DEBUG=false
 
-# Azure OpenAI embedding model name (e.g., text-embedding-ada-002, text-embedding-3-small)
-AZURE_OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+# Azure OpenAI embedding model name (e.g., text-embedding-3-small, text-embedding-3-small)
+AZURE_OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # Azure OpenAI API version for embeddings
 AZURE_OPENAI_EMBEDDING_API_VERSION=2024-02-01
@@ -39,7 +39,7 @@ FIELD_TO_EMBED=Description
 # Name of the field where embeddings will be stored
 EMBEDDED_FIELD=text-embedding-3-small
 
-# Number of dimensions in the embedding vectors (1536 for text-embedding-ada-002)
+# Number of dimensions in the embedding vectors (1536 for text-embedding-3-small)
 EMBEDDING_DIMENSIONS=1536
 
 # Number of records to load per batch during data insertion
@@ -62,7 +62,7 @@ MONGO_CLUSTER_NAME=vectorSearch
 # 1. Replace all placeholder values with your actual Azure resource information
 # 2. For production, use Azure Key Vault or environment variables instead of storing keys in files
 # 3. The EMBEDDING_DIMENSIONS must match your chosen embedding model:
-#    - text-embedding-ada-002: 1536 dimensions
+#    - text-embedding-3-small: 1536 dimensions
 #    - text-embedding-3-small: 1536 dimensions
 #    - text-embedding-3-large: 3072 dimensions
 # 4. Adjust batch sizes based on your API rate limits and performance requirements
