--- a/ai/vector-search-python/.env.example
+++ b/ai/vector-search-python/.env.example
@@ -2,8 +2,8 @@
 # Enable debug mode for verbose logging (true/false)
 DEBUG=false
 
-# Azure OpenAI embedding model name (e.g., text-embedding-ada-002, text-embedding-3-small)
-AZURE_OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+# Azure OpenAI embedding model name (e.g., text-embedding-3-small, text-embedding-3-small)
+AZURE_OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # Azure OpenAI API version for embeddings
 AZURE_OPENAI_EMBEDDING_API_VERSION=2024-02-01
@@ -38,7 +38,7 @@ FIELD_TO_EMBED=Description
 # Name of the field where embeddings will be stored
 EMBEDDED_FIELD=DescriptionVector
 
-# Number of dimensions in the embedding vectors (1536 for text-embedding-ada-002)
+# Number of dimensions in the embedding vectors (1536 for text-embedding-3-small)
 EMBEDDING_DIMENSIONS=1536
 
 # Number of records to load per batch during data insertion
