Data directory as sibling for python project

--- a/ai/vector-search-python/.env.example
+++ b/ai/vector-search-python/.env.example
@@ -25,10 +25,10 @@ DATA_FILE_WITHOUT_VECTORS=../data/Hotels.json
 DATA_FILE_WITH_VECTORS=../data/Hotels_Vector.json
 
 # Path to query file with vectors (optional)
-QUERY_FILE_WITH_VECTORS=data/query_vectors.json
+QUERY_FILE_WITH_VECTORS=../data/query_vectors.json
 
 # Directory containing data files
-DATA_FOLDER=data
+DATA_FOLDER=../data
 
 # Name of the field in documents to generate embeddings for
 FIELD_TO_EMBED=Description
