--- a/ai/vector-search-go/.env.example
+++ b/ai/vector-search-go/.env.example
@@ -19,19 +19,19 @@ EMBEDDING_SIZE_BATCH=16
 
 # Data File Configuration
 # Path to source JSON file without vector embeddings
-DATA_FILE_WITHOUT_VECTORS=data/Hotels.json
+DATA_FILE_WITHOUT_VECTORS=../data/Hotels.json
 
 # Path to JSON file with generated vector embeddings
-DATA_FILE_WITH_VECTORS=data/Hotels_Vector.json
+DATA_FILE_WITH_VECTORS=../data/Hotels_Vector.json
 
 # Path to JSON file with vector similarity data (optional)
-DATA_FILE_WITH_SIMILARITY=data/Hotels_with_similarity.json
+DATA_FILE_WITH_SIMILARITY=../data/Hotels_with_similarity.json
 
 # Path to query file with vectors (optional)
-QUERY_FILE_WITH_VECTORS=data/query_vectors.json
+QUERY_FILE_WITH_VECTORS=../data/query_vectors.json
 
 # Directory containing data files
-DATA_FOLDER=data
+DATA_FOLDER=../data
 
 # Name of the field in documents to generate embeddings for
 FIELD_TO_EMBED=Description
